--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "inkwell-reader",
+  "name": "inkwell-netlify",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "install:all": "npm install --prefix backend && npm install --prefix frontend",
-    "dev:backend": "npm --prefix backend start",
-    "dev:frontend": "npm --prefix frontend start",
-    "build:frontend": "npm --prefix frontend run build",
-    "start": "npm run dev:backend"
+    "dev": "netlify dev",
+    "build": "cd src && npm install && npm run build"
+  },
+  "devDependencies": {
+    "netlify-cli": "^17.0.0"
   }
 }
